@@ -2,10 +2,8 @@ package ca.bc.gov.nrs.vdyp.backend.v1.api;
 
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.io.InputStream;
 import java.net.URISyntaxException;
-import java.net.URL;
-import java.nio.file.Files;
-import java.nio.file.Path;
 import java.time.format.DateTimeFormatter;
 import java.util.zip.ZipEntry;
 import java.util.zip.ZipOutputStream;
@@ -18,6 +16,7 @@ import ca.bc.gov.nrs.vdyp.backend.v1.gen.model.ProjectionHcsvPostRequest;
 import ca.bc.gov.nrs.vdyp.backend.v1.gen.model.ProjectionScsvPostRequest;
 import jakarta.validation.Valid;
 import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.Response.Status;
 import jakarta.ws.rs.core.SecurityContext;
 
 public class ProjectionApiService {
@@ -26,14 +25,13 @@ public class ProjectionApiService {
 
 	public Response projectionDcsvPost(
 			@Valid ProjectionDcsvPostRequest projectionDcsvPostRequest, SecurityContext securityContext
-	) throws NotFoundException {
-		// TODO Auto-generated method stub
-		return null;
+	) {
+		return Response.serverError().entity("Not supported").build();
 	}
 
 	public Response projectionHcsvPost(
 			@Valid ProjectionHcsvPostRequest projectionHcsvPostRequest, SecurityContext securityContext
-	) throws NotFoundException {
+	) {
 		try {
 			logger.info("<projectionHcsvPost");
 
@@ -42,18 +40,18 @@ public class ProjectionApiService {
 
 			ZipEntry yieldTableZipEntry = new ZipEntry("Output_YldTbl.csv");
 			zipOut.putNextEntry(yieldTableZipEntry);
-			var yieldTablePath = getResourceFile("Output_YldTbl.csv");
-			zipOut.write(Files.readAllBytes(yieldTablePath));
+			var yieldTable = getResourceFile("Output_YldTbl.csv");
+			zipOut.write(yieldTable.readAllBytes());
 
 			ZipEntry logOutputEntry = new ZipEntry("Output_Log.txt");
 			zipOut.putNextEntry(logOutputEntry);
-			var logFilePath = getResourceFile("Output_Log.txt");
-			zipOut.write(Files.readAllBytes(logFilePath));
+			var logFile = getResourceFile("Output_Log.txt");
+			zipOut.write(logFile.readAllBytes());
 
 			ZipEntry errorOutputZipEntry = new ZipEntry("Output_Error.txt");
 			zipOut.putNextEntry(errorOutputZipEntry);
-			var errorFilePath = getResourceFile("Output_Error.txt");
-			zipOut.write(Files.readAllBytes(errorFilePath));
+			var errorFile = getResourceFile("Output_Error.txt");
+			zipOut.write(errorFile.readAllBytes());
 
 			zipOut.close();
 
@@ -63,7 +61,7 @@ public class ProjectionApiService {
 
 			DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd-HH.mm.ss");
 			var outputFileName = "vdyp-output-" + java.time.LocalDateTime.now().format(formatter);
-			return Response.ok(resultingByteArray)
+			return Response.ok(resultingByteArray).status(Status.CREATED)
 					.header("content-disposition", "attachment;filename=\"" + outputFileName + "\"").build();
 
 		} catch (IOException | URISyntaxException e) {
@@ -75,14 +73,12 @@ public class ProjectionApiService {
 
 	public Response projectionScsvPost(
 			@Valid ProjectionScsvPostRequest projectionScsvPostRequest, SecurityContext securityContext
-	) throws NotFoundException {
-		// TODO Auto-generated method stub
-		return null;
+	) {
+		return Response.serverError().entity("Not supported").build();
 	}
 
-	private Path getResourceFile(String fileName) throws URISyntaxException {
+	private InputStream getResourceFile(String fileName) throws URISyntaxException {
 		String resourceFilePath = "VDYP7Console-sample-files/hcsv/vdyp-240/" + fileName;
-		URL resourceUrl = getClass().getClassLoader().getResource(resourceFilePath);
-		return Path.of(resourceUrl.toURI());
+		return getClass().getClassLoader().getResourceAsStream(resourceFilePath);
 	}
 }
